--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "front-end/node_modules/.bin/react-scripts start",
-    "build": "front-end/node_modules/.bin/react-scripts build",
-    "test": "front-end/node_modules/.bin/react-scripts test",
-    "eject": "front-end/node_modules/.bin/react-scripts eject"
+    "start": "react-scripts start",
+    "build": "freact-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
